[package]
name = "tera-rand-cli"
version = "0.1.0"
authors = ["Raymond Liu <philosobyte@gmail.com>"]
categories = ["template-engine", "command-line-utilities"]
description = "A CLI tool for generating a feed of random data from a Tera template"
edition = "2021"
keywords = ["fake",]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Philosobyte/tera-rand"
rust-version = "1.72"

[dependencies]
anyhow = "=1.0.75"
clap = { version = "=4.3.23", features = ["derive"] }
chrono = "=0.4.26"
dashmap = "=5.5.1"
iso8601 = "=0.6.1"
tera = "=1.19.0"
tera-rand = { version = "=0.1.0", path = "../tera-rand" }
thiserror = "=1.0.47"
tracing = "=0.1.37"
tracing-subscriber = "=0.3.17"
tracing-test = "=0.2.4"
