[package]
name = "tera-rand-cli"
version = "0.1.1"
authors = ["Raymond Liu <philosobyte@gmail.com>"]
categories = ["template-engine", "command-line-utilities"]
description = "A CLI tool for generating a feed of random data from a Tera template"
edition = "2021"
keywords = ["fake",]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Philosobyte/tera-rand"
rust-version = "1.72"

[dependencies]
anyhow = "=1.0.75"
clap = { version = "=4.4.6", features = ["derive"] }
chrono = "=0.4.31"
iso8601 = "=0.6.1"
tera = "=1.19.1"
tera-rand = { version = "=0.1.2", path = "../tera-rand" }
thiserror = "=1.0.50"

[dev-dependencies]
assert_cmd = "=2.0.12"
regex = "=1.10.2"
tracing = "=0.1.40"
tracing-test = "=0.2.4"
