[package]
name = "tera-rand"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
anyhow = "1.0.71"
dashmap = "5.4.0"
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
rand = "0.8.5"
rand_distr = { version = "0.4.3", optional = true }
regex = "1.8.1"
tera = "1.18.1"

serde = { version = "1.0.162" }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4"], optional = true }

[features]
default = ["uuid", "rand_distr"]
