[package]
name = "tera-rand"
version = "0.1.0"
authors = ["Raymond Liu <philosobyte@gmail.com>"]
categories = ["template-engine",]
description = "A suite of random data generation functions for the Tera template engine"
edition = "2021"
keywords = ["fake",]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Philosobyte/tera-rand"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.75"
dashmap = "=5.5.1"
lazy_static = "=1.4.0"
rand = "=0.8.5"
serde = "=1.0.185"
tera = "=1.19.0"
thiserror = "=1.0.47"
uuid = { version = "=1.4.1", features = ["v4"], optional = true }

[dev-dependencies]
regex = "=1.9.3"
tracing = "=0.1.37"
tracing-subscriber = "=0.3.17"
tracing-test = "=0.2.4"

[features]
default = ["uuid",]
