[package]
name = "tera-rand"
version = "0.1.2"
authors = ["Raymond Liu <philosobyte@gmail.com>"]
categories = ["template-engine",]
description = "A suite of random data generation functions for the Tera template engine"
edition = "2021"
keywords = ["fake",]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Philosobyte/tera-rand"
rust-version = "1.72"

[dependencies]
anyhow = "1.0"
dashmap = "5.5"
lazy_static = "1.4"
rand = "0.8"
serde = "1.0"
tera = "1.19"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4"], optional = true }

[dev-dependencies]
regex = "1.9"
tracing = "0.1"
tracing-test = "0.2"

[features]
default = ["uuid",]
